--- a/cbdeps/faiss/1.7.4/1.7.4.properties
+++ b/cbdeps/faiss/1.7.4/1.7.4.properties
@@ -1,7 +1,7 @@
 PRODUCT=cbdeps::faiss
 RELEASE=1.7.4
 VERSION=1.7.4
-BLD_NUM=51381
+BLD_NUM=50000
 PROD_NAME=faiss
 PRODUCT_PATH=cbdeps/faiss
 MANIFEST=cbdeps/faiss/unstable.xml
@@ -10,6 +10,6 @@ PLATFORMS=linux linux:aarch64 macos macos:arm64 windows_msvc2022
 GO_VERSION=
 KEEP_GIT=true
 TOY_BUILD=true
-MANIFEST_REPO=https://github.com/couchbase/manifest
-TOY_BLD_NUM=51381
+MANIFEST_REPO=https://github.com/ceejatec/manifest
+TOY_BLD_NUM=50000
 PATCH_VIA_GERRIT_OPTS=
